# FileFlock

./: .gitignore  CMakeLists.txt  README.md
include/: chunker.hpp  client.hpp  config.hpp  file_utils.hpp  peer_client.hpp  peer_server.hpp  peer_utils.hpp  server.hpp
src/: chunker.cpp  client.cpp  config.cpp  file_utils.cpp  main.cpp  peer_client.cpp  peer_server.cpp  peer_utils.cpp  server.cpp
